# zkvot

./: .env.dev  .gitignore  README.md  app.js  package-lock.json  package.json  turbo.json
.github/workflows/: app-publish.yml  npm-publish.yml
Contracts/: .gitignore  README.md  package-lock.json  package.json
Contracts/src/: ElectionContract.ts  NewVote.ts  RangeAggregationProgram.ts  SegmentAggregate.ts  SegmentTree.ts  SegmentTreeAggregator.ts  SegmentTreeAggregatorTest.ts  VoteAggregator.ts  VoteProgram.ts  Voting.ts  VotingContract.ts  createMockVotes.ts  index.ts  index2.ts  rangeAggregation.ts  utils.ts
app/: .gitignore  README.md  app.js  next.config.mjs  package-lock.json  package.json  server.js  tailwind.config.js  tailwind.config.ts  tsconfig.json
app/app/: globals.css  layout.jsx  layout.tsx  page.jsx  page.tsx  zkappWorker.ts  zkappWorkerClient.ts
app/assets/: RightArrow.jsx
app/components/: ApplicationDataCard.jsx  CreateAppId.jsx  InitialLoadingPage.jsx  ToastProvider.jsx  providers.jsx
apps/app/src-tauri/: Cargo.toml  tauri.conf.json
apps/app/src-tauri/capabilities/: defaults.json
apps/app/src-tauri/src/: lib.rs  main.rs
backend/: .gitignore  README.md  app.js  package-lock.json  package.json
cli/: .gitignore  README.md  app.js  package-lock.json  package.json  tsconfig.json  tsconfig.tsbuildinfo
contracts/: .gitignore  package-lock.json  package.json  tsconfig.json
docker/: Docker.js
routes/: daLayersRoute.js
utils/: copyDockerFilesToUserFolder.js  createDockerFolderIfDoesntExist.js  fetch.js  isPortInUse.js  readAndWrite.js
(+665 files in other folders)
